# robot-kernel

./: CLAUDE.md
docs/: aufgabe.md
module_melectric_torque/: Makefile.am  README.md  bootstrap.sh  configure.ac.in  module_melectric_torque.pc.in
module_melectric_torque/src/: Makefile.am  melectric_torque.cpp  melectric_torque.h
