lib_LTLIBRARIES = libmodule_melectric_torque.la

libmodule_melectric_torque_la_SOURCES = melectric_torque.cpp
libmodule_melectric_torque_la_CXXFLAGS = $(ROBOTKERNEL_CFLAGS)
libmodule_melectric_torque_la_LIBADD = $(ROBOTKERNEL_LIBS)
libmodule_melectric_torque_la_LDFLAGS = -module -avoid-version -release $(PACKAGE_VERSION)
